  - added option phpui/default_module (alec)
  - added '//TRANSLIT' for iconv() conversions in pdf invoice (alec)
  - fixed dynamic popups width resizing in Firefox (alec)
  - added real expositor name printing on invoices (alec)
  - added filter on Operations History (Balance Sheet) (alec)
  - deleted link 'Remove' on customer balance box (alec)

version 1.9.0 Tilgath (2005-12-07):

  - BTS#0000216: now user with 'customers management' or 'nodes management'
    access don't need 'read only' access right (alec)
  - contrib/lms-debtors: added MySQL support (alec)
  - fixed traffic stats values in node informations (alec)
  - added link to customer stats in customer info page (alec)
  - BTS#0000471: fixed 'Tickets' link in customerinfo box (alec)
  - fixed summary on customer search results list (alec)
  - lmsd/parser: multiple logical expressions ("a && b && c" etc.) 
    supported, multiple instructions in one block supported - using
    semicolon (alec)
  - few fixes for very long customer names on pdf invoices and UI (alec)
  - fixed NetworkRemap() function when destination network is empty (alec)
  - changed link on nodes list in network info to node info instead of
    customerinfo (alec)
  - don't compress network when changing network address, user must 
    do commpression by himself (alec)
  - standardised sorting of transfer forms and invoices printouts (alec) 
  - BTS#0000481: fixed translation on transfer forms (alec)
  - invoices list display speed optimized (alec)
  - example invoices/cash records generation in genfake module (alec)
  - removed upgrade scripts for v.1.2 (alec)
  - lmsd/parser: tscript library - fixed problem with nested blocks (alec)
  - added sorting of networks list in 'Select IP address' window (alec)
  - fixed 'Check All' on Balance Sheet (alec)
  - added invoice duplicates printing (alec)
  - fixed customer balance list sorting on invoice (alec)
  - added default value of 'print_balance_history_limit' option (alec)