@@ -29,7 +29,7 @@
 			<SELECT name="document[numberplanid]" {tip text="Select numbering plan"}>
 			{foreach item=plan from=$numberplans}
 				{assign var=period value=$plan.period}
-				<OPTION value="{$plan.id}"{if $plan.id==$document.numberplanid} SELECTED{/if}>{number number=$plan.next template=$plan.template time=$document.cdate} ({$_PERIODS.$period})</OPTION>
+				<OPTION value="{$plan.id}"{if $plan.id==$document.numberplanid} SELECTED{/if}>{number number=$plan.next template=$plan.template time=$document.cdate} ({$_NUM_PERIODS.$period})</OPTION>
 			{/foreach}
 			{else}
 				<INPUT type="hidden" name="document[numberplanid]" value="0">
