@@ -51,7 +51,7 @@
 		</TD>
 		<TD align="right" NOWRAP onClick="return self.location.href='?m=numberplanedit&id={$numberplanlist[numberplanlist].id}';">
 			{assign var="period" value=$numberplanlist[numberplanlist].period}
-			{$_PERIODS.$period}
+			{$_NUM_PERIODS.$period}
 		</TD>
 		<TD align="right" NOWRAP onClick="return self.location.href='?m=numberplanedit&id={$numberplanlist[numberplanlist].id}';">
 			{if $numberplanlist[numberplanlist].isdefault}{t}yes{/t}{/if}
