@@ -36,6 +36,7 @@ version ? (????-??-??):
   - added real expositor name printing on invoices (alec)
   - added filter on Operations History (Balance Sheet) (alec)
   - deleted link 'Remove' on customer balance box (alec)
+  - added continuous numbering plan (alec)
 
 version 1.9.0 Tilgath (2005-12-07):
 
